# HTTP-Server

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: client.cpp.2212543D70F23FD7.idx  client.hpp.9FDBE2FA31FD735A.idx  config.hpp.23570F5AF90941C0.idx  req_res.cpp.1F8B79B1388F1DB9.idx  req_res.hpp.F0B3E4356BEFAB0A.idx  server.cpp.4E6FC17F2B05D6CD.idx  server.hpp.44DA1883EDFEF2D3.idx  thread_pool.cpp.331002F2C1075296.idx  thread_pool.hpp.DA01F79D4581A047.idx
example/: CMakeLists.txt  README.md  main.cpp
example/pages/: 404.html  about.html  index.html
example/src/: main.cpp
include/: client.hpp  config.hpp  req_res.hpp  request.hpp  request_builder.hpp  response.hpp  response_builder.hpp  server.hpp  thread_pool.hpp
src/: client.cpp  main.cpp  req_res.cpp  request.cpp  request_builder.cpp  response_builder.cpp  server.cpp  thread_pool.cpp
tests/: CMakeLists.txt  main_test.cpp  test_request_builder.cpp  test_response_builder.cpp
